--- a/web/index.html
+++ b/web/index.html
@@ -15,16 +15,16 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="BSMART Application">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="bsmart2021">
+  <meta name="apple-mobile-web-app-title" content="BSMART">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>BSMART</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/web/manifest.json">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
